# Astra-System

./: .dockerignore  .editorconfig  .env.example  .gitignore  .prettierignore  .spectral.json  AGENTS.md  ARCHITECTURE.md  LICENSE  PROJECT_AUDIT.md  README.es.md  README.ja.md  README.ko.md  README.md  README.zh.md  docker-compose.ci.yml  docker-compose.prod.yml  docker-compose.yml  flake.nix  opencode.json  promt.md
.github/: dependabot.yml
.github/workflows/: build-installer.yml  ci.yml
.husky/: commit-msg  pre-commit
astra-service/: .env.example  .gitignore  .prettierrc.json  UX_UI_AUDIT_REPORT.md  biome.json  commitlint.config.js  eslint.config.js  go.work  go.work.sum  lefthook.yml  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
astra-service/daemons/payment-sidecar/: Cargo.toml  Dockerfile
astra-service/daemons/payment-sidecar/src/: api.rs  lib.rs  main.rs
astra-service/daemons/payment-sidecar/src/verifone/: ffi.rs  mod.rs  sim.rs
astra-service/services/ml-lane-intel/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
astra-service/services/ml-lane-intel/models/: download_model.py
astra-service/services/ml-lane-intel/proto/: common.proto  common_pb2.py  common_pb2_grpc.py  lane.proto  lane_pb2.py  lane_pb2_grpc.py
astra-service/services/ml-lane-intel/src/: health.py  main.py  model.py  service.py
astra-service/services/ml-lane-intel/tests/: conftest.py  test_health.py  test_model.py  test_service.py
astra-service/sync-daemon/: Cargo.toml  Dockerfile  README.md  build.rs
astra-service/sync-daemon/.cargo/: audit.toml
astra-service/sync-daemon/proto/: sync.proto
astra-service/sync-daemon/src/: config.rs  differential_privacy.rs  lib.rs  main.rs
astra-service/sync-daemon/src/cloud/: mod.rs
astra-service/sync-daemon/src/crdt/: hlc.rs  mod.rs
astra-service/sync-daemon/src/crypto/: mod.rs
astra-service/sync-daemon/src/grpc/: mod.rs
astra-service/sync-daemon/src/network/: mod.rs
astra-service/sync-daemon/src/offline/: mod.rs  token.rs
astra-service/sync-daemon/src/p2p/: mesh.rs  mod.rs  protocol.rs
astra-service/sync-daemon/src/protocol/: mod.rs
astra-service/sync-daemon/src/raft/: mod.rs
astra-service/sync-daemon/src/storage/: mod.rs  sqlite.rs
astra-service/sync-daemon/src/store/: sqlite.rs
astra-service/sync-daemon/src/sync/: crdt.rs  engine.rs  mod.rs
astra-service/sync-daemon/src/telemetry/: baggage.rs  metrics.rs  mod.rs
astra-service/sync-daemon/src/verifone/: error.rs  ffi.rs  mod.rs
astra-service/tools/chaos/: Cargo.toml  README.md
astra-service/tools/chaos/src/: cli.rs  disk_pressure.rs  main.rs  memory_pressure.rs  partition.rs
astra-service/tools/chaos/src/backend/: iptables.rs  mod.rs  pf.rs  tc.rs
database/migrations/: 0001_init.sql  0002_outbox_relay.sql  0003_seed_permissions.sql  0004_partitioning.sql  0005_webauthn_sessions.sql  README.md
database/schemas/: drizzle.test.ts  drizzle.ts  go.mod  go_structs.go  go_structs_test.go  package.json  tsconfig.json
docs/: API-BACKEND-ASTRA.md  KIOSK-PACKAGES.md  README.md  WINDOWS-INSTALLER.md
docs/Readme Translations/: README.ar.md  README.bn.md  README.de.md  README.es.md  README.fr.md  README.hi.md  README.ja.md  README.ko.md  README.la.md  README.pt.md  README.ru.md  README.th.md  README.tlh.md  README.tr.md  README.ur.md  README.vi.md  README.zh-TW.md  README.zh.md
docs/architecture/: offline-first.md  overview.md  security-model.md  system-design.md
docs/backend/: admin-graphql.md  api-gateway.md  cart-service.md  grpc-api.md  inventory-service.md  menu-service.md  microservices.md  ml-lane-intel.md  order-service.md  payment-orchestrator.md  rest-api.md  sync-service.md  webauthn-service.md
docs/database/: entities.md  migrations.md  schema.md
docs/development/: coding-standards.md  setup.md  testing.md  workflow.md
docs/extensions/: legacy-pos-adapter.md  plugins.md
docs/frontend/: kiosk-apps.md  micro-frontends.md  module-federation.md  state-management.md
docs/infrastructure/: ci-cd.md  docker.md  kubernetes.md  monitoring.md
docs/networking/: p2p-mesh.md  protocols.md
docs/operations/: deployment.md
docs/protobuf/: overview.md  service-definitions.md
docs/references/: adrs.md  env-vars.md  glossary.md
docs/runbooks/: incident-response.md  offline-mode-operations.md  p2p-partition-recovery.md  payment-failure-runbook.md
docs/security/: authentication.md  encryption.md  overview.md
i18n/: README.es.md  README.ja.md  README.ko.md  README.la.md  README.zh.md
infra/docker/: Dockerfile.admin  Dockerfile.admin-graphql  Dockerfile.cart-service  Dockerfile.gateway  Dockerfile.inventory-service  Dockerfile.kiosk  Dockerfile.kiosk-unified  Dockerfile.menu-service  Dockerfile.ml-lane-intel  Dockerfile.order-service  Dockerfile.payment-orchestrator  Dockerfile.sync-service  Dockerfile.syncd  Dockerfile.update-server  Dockerfile.webauthn-service  README.md  apparmor.kiosk  apparmor.syncd  seccomp.json
infra/k8s/: configmap.yaml  deployment-cart.yaml  deployment-gateway.yaml  deployment-inventory.yaml  deployment-menu.yaml  deployment-order.yaml  deployment-payment-orchestrator.yaml  deployment-sync-service.yaml  hpa.yaml  ingress.yaml  namespace.yaml  network-policy.yaml  secret-template.yaml  statefulset-nats.yaml  statefulset-postgres.yaml  statefulset-redis.yaml
infra/loki/: loki.yml
infra/nginx/: kiosk-unified.conf  kiosk.conf
infra/otel/: otel-collector.yml
infra/prometheus/: prometheus.yml
infra/terraform/: main.tf  values.tftpl  variables.tf
infra/tls/: .gitignore  generate-certs.sh
installer/: CHANNELS.md  setup.iss  version.json
installer/astra-installer/: go.mod
installer/astra-updater/: go.mod
installer/resources/: .env.template  astra.conf.template
installer/scripts/: bootstrap.ps1  install.sh  release.ps1  smoke-test.sh
proto/: README.md  buf.gen.yaml  buf.yaml  generate.go  go.mod  go.sum
proto/proto/: auth.proto  cart.proto  events.proto  inventory.proto  menu.proto  order.proto  payment.proto  sync.proto  webauthn.proto
services/update-server/: Dockerfile  (+1 more)
(+482 files in other folders)
