[package]
name = "astra-syncd"
version = "0.1.0"
edition = "2021"
authors = ["Astra Systems <engineering@astra.systems>"]
description = "Production-grade P2P mesh sync daemon for Astra kiosks"
license = "UNLICENSED"
repository = "https://github.com/astra-systems/astra-service"
rust-version = "1.75"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full", "signal", "time", "sync", "rt-multi-thread"] }

# P2P networking (libp2p re-exports all sub-crates via feature flags)
libp2p = { version = "0.56", features = [
    "quic",
    "noise",
    "mdns",
    "gossipsub",
    "request-response",
    "kad",
    "identify",
    "ping",
    "tokio",
    "macros",
] }

# gRPC
tonic = "0.11"
prost = "0.12"
tower = "0.4"

# NATS JetStream
async-nats = "0.49"

# Database
rusqlite = { version = "0.30", features = ["bundled-sqlcipher", "chrono", "uuid", "serde_json"] }

# Cryptography
x25519-dalek = "2.0"
chacha20poly1305 = "0.10"
blake3 = "1.5"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
zeroize = { version = "1.7", features = ["derive"] }
secrecy = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
bytes = "1.5"
prost-types = "0.12"

# Configuration & CLI
clap = { version = "4.4", features = ["derive", "env", "cargo"] }
config = "0.14"
envy = "0.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
tracing-opentelemetry = "0.25"

# OpenTelemetry
opentelemetry = "0.24"
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.17", features = ["grpc-tonic"] }
opentelemetry-semantic-conventions = "0.26"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
indexmap = "2.1"
dashmap = "5.5"
parking_lot = "0.12"
crossbeam = "0.8"
async-trait = "0.1"
futures = "0.3"
stream-cancel = "0.8"
hex = "0.4"
base64 = "0.21"
regex = "1.10"
rand_distr = "0.4"

# Metrics (optional but production-ready)
prometheus = { version = "0.14", features = ["process"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Serialization (bincode for P2P protocol frames)
bincode = "1.3"

# Password hashing (for key derivation)
argon2 = "0.5"
password-hash = "0.5"

# Testing (dev-dependencies)
[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
proptest = "1.4"
criterion = { version = "0.5", features = ["async_tokio"] }
tempfile = "3.9"

[build-dependencies]
tonic-build = "0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1

[profile.bench]
opt-level = 3
lto = true
